SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements: 

Object tree filtering:
   Multiple (comma separated) Object tree filters can be defined. Filter conditions can be excluding oder including.
   Better support for placeholders "%" and "_".
   See "Session Properties"/"New Session Properties" dialogs --> Tab "Object Tree".

Graph Plugin:
 - Qualified table names can now be displayed. Use the right mouse menu on graph background.

Edit Extras Plugin:
 - Improved handling and look of Escape date dialog. 

Graph Plugin:
 - New entries in table's popup menu: "Copy table name" and "Copy qualified table name".
 - Columns of all tables in a graph can now be ordered at once. Use the right mouse menu on graph background.

New Plugin: Smarttools by Michael Romankiewicz
  - Searching for tables that do not have a primary key or unique index or index.
  - Searching for non nullable columns that contain null values. Some DBs e.g. Firebird can be tricked to have this inconsistency.
  - Changing values database wide according to specified criteria.
  For more information see the Plugin's help.


New Plugin: Firebird Manager by Michael Romankiewicz
  - Storing and restoring Firebird DBs
  - Managing users and roles for the Firebird RDBMS
  For more information see the Plugin's help.

 - Aliases can be displayed as list or as tree.

 - A new preference for choosing Locale is available in Global Preferences -> General tab.  This allows you to
   set your preferred locale, and if an optional translation is installed that corresponds with the preferred
   locale, then restart and the changes take effect.(No longer necessary to hand edit the start script)

 - Copy as "SQL WHERE" / "UPDATE-SET" / "INSERT-VALUES" statement function in tables